# icml26-repro-20hdQQQrA4-caffnet-constraint-affine

./: README.md  STATUS.md  logbook.json  pyproject.toml
.trackio/: metadata.json
.trackio/logbook/: README.md  index.html  logbook.json  poster_embed.html
.trackio/logbook/pages/: index.md
.trackio/logbook/pages/claim-1-trained-hard-constraint-networks/: page.md
docs/: THEOREM_AUDIT.md  TRAINING_AUDIT.md
outputs/: caffnet_summary.json  caffnet_train_a.json  caffnet_train_b.json  caffnet_train_btight.json  caffnet_train_density.json  caffnet_train_report.json  caffnet_train_widths.json  hardnet_unicycle_audit.json  hardnet_unicycle_results.json  training_analysis.json
outputs/joint_control/: SHA256SUMS  attempt_report.md  commands.txt  learning_curves.csv  summary.json  verification.json
outputs/parameterization_equivalence/: SHA256SUMS  attempt_report.md  commands.txt  proof.md  random_cases.csv  summary.json  verification.json
pages/claim-hardnet-unicycle-control/: page.md
pages/claim-theorem35-exact-bound/: page.md
repro/outputs/: theorem_certificates.json
repro/src/: analyze_training.py  audit_hardnet_unicycle_control.py  audit_theorem35_exact_bound.py  caffnet.py  caffnet_train.py  report_training.py  run_caffnet.py  run_joint_control_stdlib.py  run_parameterization_equivalence_stdlib.py  run_theorem_audit.py  theorem_certificates.py  verify_hardnet_unicycle_control.py  verify_theorem35_exact_bound.py
repro/tests/: test_caffnet.py  test_caffnet_train.py  test_theorem_certificates.py  test_training_analysis.py
(+9 files in other folders)
