[project]
name = "icml26-repro-20hdQQQrA4-caffnet-constraint-affine"
version = "0.1.0"
description = "Clean-room repro of CAffNet (hard constraint-affine neural networks), ICML 2026, OpenReview 20hdQQQrA4."
requires-python = ">=3.11,<3.13"
dependencies = ["numpy", "scipy"]
[tool.pytest.ini_options]
pythonpath = ["repro/src"]
