[project]
name = "icml26-repro-20hdQQQrA4-caffnet-constraint-affine"
version = "0.1.0"
description = "Clean-room repro of CAffNet (hard constraint-affine neural networks), ICML 2026, OpenReview 20hdQQQrA4."
requires-python = ">=3.11,<3.13"
dependencies = ["numpy==2.5.1", "scipy==1.18.0", "torch==2.13.0", "pytest==9.1.1"]
[tool.pytest.ini_options]
pythonpath = ["repro/src"]
